# SeetaAuthorize

./: CMakeLists.txt  README.md
cmake/: SeetaAuthorizeConfig.cmake
craft/: build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
doc/zh_cn/: README.md
include/: SeetaLANLock.h
include/lock/: cstamodelfilestream.h  cstastream.h  error_code.h  fast_cstastream.h  fast_encryptstream.h
